--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,10 @@ h1, h2, h3, h4, h5, h6, p {
     overflow: hidden;
 }
 
+.icon-description {
+    display: none;
+}
+
 .container-description {
     display: flex;
     /* padding: 120px 0; */
@@ -225,9 +229,11 @@ h1, h2, h3, h4, h5, h6, p {
 
 .description-title {
     margin-bottom: 8px;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
+    /* font-weight: 500; */
+    font-weight: 700;
+    /* font-size: 20px; */
+    font-size: 36px;
+    line-height: 1.1;
     letter-spacing: 0.02em;
     text-align: center;       
 }
@@ -243,19 +249,28 @@ h1, h2, h3, h4, h5, h6, p {
 /*3section*/
 
 .team {
+    
     background-color: #f4f4fd;
-    padding: 120px 0;
-    height: 780px;
+    /* padding: 120px 0; */
+    padding: 96px 28px;
+    min-height: 780px;
 }
 
  img {
     display: block;
+    max-width: 100%;
+    height: auto;
 }
  
 .list {
     display: flex;
-    gap: 24px;
-    width: 100%
+    flex-wrap: wrap;
+    /* gap: 24px; */
+    gap: 72px 0;
+    width: 100%;
+    /* flex-basis: calc((100% - 3 * 24px) / 4); */
+    justify-content: center;
+    /* overflow: hidden; */
 }
 
 .team-title {
@@ -279,8 +294,8 @@ h1, h2, h3, h4, h5, h6, p {
 
 .team-list {
     justify-content: center;
-    get: 24px;
-    height: ;
+    gap: 24px;
+    height: auto;
     overflow: hidden;
 }
 
@@ -803,6 +818,9 @@ h1, h2, h3, h4, h5, h6, p {
         min-width: 321px;
         max-width: 768px;
     }
+    .list> .container {
+        max-width: 584px;
+    }
     .description {
         gap: 72px 24px;     
     }
@@ -811,7 +829,11 @@ h1, h2, h3, h4, h5, h6, p {
     }
     .description-title {
         text-align: left;
-    }   
+    } 
+    .list {
+        gap: 64px 24px;
+        /* width: calc((100% - 24px) / 2); */
+    }
 }
 
 @media screen and (min-width: 769px) and (max-width: 1440px) {
@@ -823,6 +845,7 @@ h1, h2, h3, h4, h5, h6, p {
         flex-basis: calc((100% - 3*24px) / 4);
     }
     .description {
+        flex-wrap: nowrap;
         gap: 24px;
     }
     .container-description {
@@ -834,5 +857,20 @@ h1, h2, h3, h4, h5, h6, p {
     }
     .description-title {
         text-align: left;
+        font-size: 20px;
+        font-weight: 500;
+    }
+    .icon-description {
+        display: flex;
+    }
+    .list {
+        gap: 24px;
+        /* flex-basis: calc((100% - 3*24px) / 4); */
+    }
+    .nav-item-img {
+        max-width: 264px;
     }
 }
+
+
+
