--- a/css/style.css
+++ b/css/style.css
@@ -126,19 +126,29 @@ h1, h2, h3, h4, h5, h6, p {
 /*1section*/
 
 .box {
-    padding: 188px 0;
+    padding: 72px 0;
     background-color: #2e2f42;
-    padding-top: 188px;
-    padding-bottom: 188px;
+    /* padding-top: 188px; */
+    /* padding-bottom: 188px; */
     background-image: 
     linear-gradient(rgba(46, 47, 66, 0.7), 
     rgba(46, 47, 66, 0.7)), 
-    url(../images/people-office.jpg);
+    url(../images/people-office-mob-1x.jpg);
     max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
     margin: 0 auto;
+}
+
+@media screen and (min-device-pixel-ratio: 2), 
+(min-resolution: 192dpi), (min-resolution: 2dppx) {
+    .box {
+        background-image: 
+        linear-gradient(rgba(46, 47, 66, 0.7), 
+        rgba(46, 47, 66, 0.7)), 
+        url(../images/people-office-mob-2x.jpg);
+    }
 }
  
 .icon-description {
@@ -154,14 +164,17 @@ h1, h2, h3, h4, h5, h6, p {
 
 .title-box {
     max-width: 496px;
-    font-size: 56px;
-    line-height: 1.07;
+    /* font-size: 56px; */
+    font-size: 36px;
+    /* line-height: 1.07; */
+    line-height: 1.1;
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
     margin-right: auto;
     margin-left: auto;
-    margin-bottom: 48px;
+    /* margin-bottom: 48px; */
+    margin-bottom: 72px;
 }
 
 .button-box {
@@ -253,7 +266,7 @@ h1, h2, h3, h4, h5, h6, p {
     background-color: #f4f4fd;
     /* padding: 120px 0; */
     padding: 96px 28px;
-    min-height: 780px;
+    /* min-height: 780px; */
 }
 
  img {
@@ -813,14 +826,39 @@ h1, h2, h3, h4, h5, h6, p {
 
 /* media  */
 
-@media screen and (min-width: 321px) and (max-width: 768px) {
+@media screen and (min-width: 768px) {
     .container {
-        min-width: 321px;
+        /* min-width: 321px; */
         max-width: 768px;
     }
     .list> .container {
         max-width: 584px;
     }
+    .box {
+        padding: 112px 0;
+        background-image:
+        linear-gradient(rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
+        url(../images/people-office-pl-1x.jpg);
+    }
+
+@media screen and (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+    .box {
+        background-image:
+        linear-gradient(rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
+        url(../images/people-office-pl-2x.jpg);
+    }
+}
+
+    .title-box{
+        font-size: 56px;
+        line-height: 1.07;
+        margin-bottom: 36px;
+    }
+
     .description {
         gap: 72px 24px;     
     }
@@ -836,10 +874,33 @@ h1, h2, h3, h4, h5, h6, p {
     }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1440px) {
+@media screen and (min-width: 1158px) {
     .container {
-        min-width: 769px;
-        max-width: 1440px;
+        /* min-width: 769px; */
+        max-width: 1158px;
+        padding: 0 15;
+    }
+    .box {
+        padding: 188px 0;
+        background-image:
+        linear-gradient(rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
+        url(../images/people-office-1x.jpg);
+    }
+
+@media screen and (min-device-pixel-ratio: 2), 
+(min-resolution: 192dpi), (min-resolution: 2dppx) {
+        .box {
+            background-image:
+            linear-gradient(rgba(46, 47, 66, 0.7), 
+            rgba(46, 47, 66, 0.7)), 
+            url(../images/people-office-2x.jpg);
+            }
+    
+    .title-box {
+        font-size: 56px;
+        line-height: 1.07;
+        margin-bottom: 48px;
     }
      .description-text {
         flex-basis: calc((100% - 3*24px) / 4);
