--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,9 @@ h1, h2, h3, h4, h5, h6, p {
     padding: 0 16px;
     margin: 0 auto;
 }
+.button {
+    cursor: pointer;
+}
 
 /*header*/
 
@@ -40,17 +43,15 @@ h1, h2, h3, h4, h5, h6, p {
     0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
-.header-container,
-.header-nav,
-.nav-list,
-.contacts-list {
+.header-container {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
  .nav-list,
- .contacts-list {
-    gap: 40px;
+ .contacts {
+    display: none;
 }
 
  .logo {
@@ -64,64 +65,26 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 .header-logo {
-    padding: 24px 0;
-    margin-right: 76px;
+    display: block;
+    padding: 16px 0;
 }
 
 .header-logo .logo-part {
     color: #2e2f42;
 }
 
-.nav-link {
-    padding: 24px 0;
+.button-btn {
+    padding: 0;
+    border: none;
+    background-color: transparent;
+}
+
+.burger-icon {
     display: block;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #2e2f42;
-        transition: color 250ms 
-        cubic-bezier(0.4, 0, 0.2, 1);
-}  
-
-.nav-link.current {
-    position: relative;
+    fill: #2f2f37;
 }
 
-.nav-link.current::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    border-radius: 2px;
-    width: 100%;
-    height: 4px;
-    background-color: #404bbf;
-}
 
-.contacts {
-    font-style: normal;
-    margin-left: auto;
-}
-
-.contacts-link {
-    display: block;
-    padding: 24px 0;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #434455;
-        transition: color 250ms 
-        cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.nav-link:hover,
-.nav-link:focus,
-.contacts-link:hover,
-.contacts-link:focus,
-.nav-link.current {
-    color: #404bbf;
-}
 
 /*1section*/
 
@@ -826,14 +789,89 @@ h1, h2, h3, h4, h5, h6, p {
 
 /* media  */
 
+/* tablet */
+
 @media screen and (min-width: 768px) {
     .container {
-        /* min-width: 321px; */
         max-width: 768px;
     }
     .list> .container {
         max-width: 584px;
     }
+    .button-btn {
+        display: none;
+    }
+    
+    .nav-list {
+        display: flex;
+        align-items: center;
+        gap: 40px;
+    }
+
+    .contacts {
+        font-style: normal;
+        display: block;
+    }
+
+    .header-nav {
+        display: flex;
+        align-items: center;
+    }
+
+    .header-logo {
+        padding: 24px 0;
+        margin-right: 120px;
+    }
+
+    .nav-link {
+        padding: 24px 0;
+        display: block;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .nav-link.current {
+        position: relative;
+    }
+
+    .nav-link.current::after {  
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: -1px;
+        border-radius: 2px;
+        width: 100%;
+        height: 4px;
+        background-color: #404bbf;
+    }
+
+    .nav-link:hover,
+    .nav-link:focus,
+    .contacts-link:hover,
+    .contacts-link:focus,
+    .nav-link.current {
+        color: #404bbf;
+    } 
+
+    .contacts-list {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
+
+    .contacts-link {
+        display: block;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: #434455;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
     .box {
         padding: 112px 0;
         background-image:
@@ -842,16 +880,16 @@ h1, h2, h3, h4, h5, h6, p {
         url(../images/people-office-pl-1x.jpg);
     }
 
-@media screen and (min-device-pixel-ratio: 2),
-(min-resolution: 192dpi),
-(min-resolution: 2dppx) {
-    .box {
-        background-image:
-        linear-gradient(rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)),
-        url(../images/people-office-pl-2x.jpg);
+    @media screen and (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+        .box {
+            background-image:
+            linear-gradient(rgba(46, 47, 66, 0.7),
+            rgba(46, 47, 66, 0.7)),
+            url(../images/people-office-pl-2x.jpg);
+        }
     }
-}
 
     .title-box{
         font-size: 56px;
@@ -874,12 +912,32 @@ h1, h2, h3, h4, h5, h6, p {
     }
 }
 
+/* descktop */
+
 @media screen and (min-width: 1158px) {
     .container {
-        /* min-width: 769px; */
         max-width: 1158px;
         padding: 0 15;
     }
+
+    .header-logo {
+        margin-right: 76px;
+    }
+
+    .contacts-list {
+        flex-direction: row;
+        align-items: center;
+        gap: 40px;
+    }
+
+    .contacts-link {
+        padding: 24px 0;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+    }
+
+
     .box {
         padding: 188px 0;
         background-image:
@@ -888,14 +946,15 @@ h1, h2, h3, h4, h5, h6, p {
         url(../images/people-office-1x.jpg);
     }
 
-@media screen and (min-device-pixel-ratio: 2), 
-(min-resolution: 192dpi), (min-resolution: 2dppx) {
+    @media screen and (min-device-pixel-ratio: 2), 
+    (min-resolution: 192dpi), (min-resolution: 2dppx) {
         .box {
             background-image:
             linear-gradient(rgba(46, 47, 66, 0.7), 
             rgba(46, 47, 66, 0.7)), 
             url(../images/people-office-2x.jpg);
             }
+    }
     
     .title-box {
         font-size: 56px;
