--- a/css/style.css
+++ b/css/style.css
@@ -683,10 +683,11 @@ picture {
     top: 50%;
     left: 50%;
     border-radius: 4px;
+    /* min-width: 288px; */
+    width: 100%;
+    max-width: 408px;
    
-    max-width: 288px;
-   
-    max-height: 623px;
+    max-height: 584px;
     box-shadow: 
     0 1px 1px 0 rgba(0, 0, 0, 0.14), 
     0 1px 3px 0 rgba(0, 0, 0, 0.12), 
@@ -1052,7 +1053,7 @@ picture {
 
     .modal {
         width: 408px;
-        min-height: 584px;
+        height: 584px;
         padding: 72px 24px 24px 24px;
     }
 
